Hamburger menu fixes

--- a/static/content/sass/base/_variables.scss
+++ b/static/content/sass/base/_variables.scss
@@ -19,6 +19,7 @@ $grey: #D0D3D6;
 $grey-100: #E8E9EB;
 $grey-200: #889098;
 $grey-dark:#1B191F;
+$grey-dark-100:#2A3947;
 
 // Color helpers
 $text-primary: $purple;
