--- a/static/content/sass/layout/_header.scss
+++ b/static/content/sass/layout/_header.scss
@@ -1,14 +1,46 @@
 header {
     .navbar {
         padding: 0;
-        top: 47px;
+        top: 16px;
+        @include media-breakpoint-up(lg) {
+            top: 47px
+        }
+        img {
+            width: 32px;
+            @include media-breakpoint-up(md) {
+                width: 59px;
+            }
+        }
     }
-    .navbar-nav {
+    .navbar-nav,
+    .nav {
         gap: 20px;
         a {
             @include text-gradient(linear-gradient(83deg, $grey 10%, $white 90%));
             &:hover {
                 @include text-gradient(linear-gradient(83deg, $purple 10%, $purple-100 90%));
+            }
+        }
+    }
+    .nav-item {
+        position: relative;
+        &:after {
+            content: '';
+            background: url('../images/style-images/icon-caret-right.svg') right center / 7px auto no-repeat;
+            position: absolute;
+            top: 50%;
+            right: 0;
+            height: 12px;
+            width: 7px;
+            @include prefix(transform, translateY(-50%));
+            @include prefix(transition, 0.15s ease-in-out);
+            @include media-breakpoint-up(lg) {
+                display: none
+            }
+        }
+        &:last-child {
+            &:after {
+                display: none
             }
         }
     }
@@ -21,15 +53,26 @@ header {
     }
 
     .navbar-toggler {
-        position: relative;
         z-index: 2;
-        &.collapsed {
-            .navbar-toggler-icon {
-                background: url('../images/style-images/hamburger-menu.svg') right center / 32px auto no-repeat;
-            }
-        }
+        position: absolute;
+        top: 50%;
+        width: 32px;
+        height: 32px;
+        right: 0;
+        background: $grey-dark-100;
+        @include prefix(transform, translateY(-50%));
         .navbar-toggler-icon {
-            background: url('../images/style-images/icon-close.svg') right center / 20px auto no-repeat;
+            background: url('../images/style-images/icon-hamburger.svg') center center / 20px auto no-repeat;
+            left: 50%;
+            top: 50%;
+            position: relative;
+            @include prefix(transform, translate(-50%,-50%));
+        }
+        &[aria-expanded="true"] {
+            background: none;
+            .navbar-toggler-icon {
+                background: url('../images/style-images/icon-close.svg') center center / 20px auto no-repeat;
+            }
         }
     }
 
@@ -41,6 +84,7 @@ header {
         z-index: 1;
         margin-left: 24px;
         right: 0;
+        overflow: hidden;
 
         .navbar-nav {
             height: 100vh !important;
