--- a/static/content/sass/theme/_home.scss
+++ b/static/content/sass/theme/_home.scss
@@ -4,21 +4,34 @@
             object-fit: cover;
             width: 100%;
             object-position: top center;
-            @include media-breakpoint-up(md) {
-                height: 802px;
+            @include media-breakpoint-up(lg) {
+                height: 790px;
             }
 
         }
     }
     .banner-content {
-        padding-top: 200px;
-        p {
-            max-width: 390px;
+        padding-top: 84px;
+        @include media-breakpoint-up(md) {
+            padding-top: 150px;
+        }
+        @include media-breakpoint-up(lg) {
+            padding-top: 200px;
+        }
+        .content {
+            max-width: 265px;
+            @include media-breakpoint-up(lg) {
+                max-width: 562px;
+            }
+            p {
+                padding: 0 0 14px;
+            }
         }
     }
     .btn-group {
         gap: 12px;
-        @include media-breakpoint-up(md) {
+        padding: 0 0 40px;
+        @include media-breakpoint-up(lg) {
             gap: 16px;
             padding: 30px 0 84px;
         }
@@ -26,18 +39,77 @@
     .intro-video {
         gap: 15px;
         img {
-            @include media-breakpoint-up(md) {
+            @include media-breakpoint-up(lg) {
                 width: 100px;
+            }
+        }
+        .media-body {
+            @include font-size(12px);
+            line-height: 16px;
+            
+            @include media-breakpoint-up(lg) {
+                @include font-size(14px);
+            }
+            span {
+                display: block;
             }
         }
     }
     .banner-image {
-        @include media-breakpoint-up(md) {
+        width: 327px;
+        right: auto;
+        left: 50%;
+        @include prefix(transform, translateX(-50%));
+        @include media-breakpoint-up(lg) {
             width: 750px;
             right: -45px;
         }
         img {
             width: 100%;
+        }
+    }
+    .user-count {
+        position: absolute;
+        right: 15px;
+        top: -44px;
+        @include media-breakpoint-up(md) {
+            position: relative;
+            top: 0;
+            right: 0;
+        }
+        img {
+            width: 177px;
+            @include media-breakpoint-up(lg) {
+                width: 320px;
+            }
+        }
+    }
+    .floating-social-icons {
+        position: absolute;
+        top: 50%;
+        right: 24px;
+        @include prefix(transform, translateY(-50%));
+        @include media-breakpoint-up(md) {
+            left: 12px;
+            right: auto;
+        }
+        @include media-breakpoint-up(lg) {
+            left: 32px;
+        }
+    
+        .social-icon {
+            display: block;
+            margin-bottom: 12px;
+        }
+          
+        .social-icon img {
+            width: 32px;
+            height: 32px;
+            border: none;
+            @include media-breakpoint-up(lg) {
+                width: 45px;
+                height: 45px;
+            }
         }
     }
 }
@@ -66,19 +138,37 @@
             width: 1114px;
         }
     }
+    .box-layout {
+        border-radius: 16px;
+        padding: 0 15px;
+        @include media-breakpoint-up(lg) {
+            border-radius: 40px;
+        }
+        &-heading {
+            padding: 20px 0;
+            @include media-breakpoint-up(md) {
+                padding: 50px 0;
+            }
+        }
+    }
     .banner-team-member img {
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
         bottom: 0;
+        @include media-breakpoint-up(lg) {
+            width: 278px;
+        }
     }
     .team-note {
         img {
             position: absolute;
-            left: -95px;
-            top: -30px;
-            @include media-breakpoint-up(md) {
+            left: -15px;
+            top: 5px;
+            @include media-breakpoint-up(lg) {
                 width: 92px;
+                left: -95px;
+                top: -30px;
             }
         }
         p {
@@ -86,13 +176,16 @@
         }
     }
     .team-info {
+        @include media-breakpoint-up(lg) {
+            margin-right: 40px;
+        }
         h4 {
             color: $text-secondary;
             @include font-size(12px);
             line-height: 20px;
-            margin-bottom: 12px;
-            @include media-breakpoint-up(md) {
+            @include media-breakpoint-up(lg) {
                 @include font-size(32px);
+                margin-bottom: 12px;
             }
         }
         p {
