Background blur and font size fixes

--- a/static/content/sass/base/_utilities.scss
+++ b/static/content/sass/base/_utilities.scss
@@ -42,6 +42,10 @@ $color in $text-color {
   padding: 140px 0;
 }
 
+.gap-16 {
+  gap: 16px;
+}
+
 .bg-purple-dark-grad {
   @extend %purple-dark-bg-grad;
 }
