--- a/static/content/sass/layout/_footer.scss
+++ b/static/content/sass/layout/_footer.scss
@@ -91,4 +91,11 @@ footer {
             transition-timing-function: ease; 
         }
     }
+    .footer-social-links {
+        img {
+            @include media-breakpoint-up(lg) {
+                width: 16px;
+            }  
+        }
+    }
 }
