--- a/static/content/sass/theme/_home.scss
+++ b/static/content/sass/theme/_home.scss
@@ -5,6 +5,9 @@
             width: 100%;
             object-position: top center;
             @include media-breakpoint-up(lg) {
+                height: 618px;
+            }
+            @include media-breakpoint-up(xl) {
                 height: 790px;
             }
 
@@ -20,6 +23,9 @@
         }
         .content {
             max-width: 265px;
+            @include media-breakpoint-up(md) {
+                max-width: 100%;
+            }
             @include media-breakpoint-up(lg) {
                 max-width: 562px;
             }
@@ -61,6 +67,10 @@
         left: 50%;
         @include prefix(transform, translateX(-50%));
         @include media-breakpoint-up(lg) {
+            width: 500px;
+            right: -45px;
+        }
+        @include media-breakpoint-up(xl) {
             width: 750px;
             right: -45px;
         }
@@ -116,8 +126,17 @@
 
 .how-it-works-section {
     padding: 180px 0 0;
+    @include media-breakpoint-up(md) {
+        padding: 0;
+    }
     @include media-breakpoint-up(lg) {
         padding: 110px 0 0;
+    }
+    .banner-image img {
+        width: 342px;
+        @include media-breakpoint-up(lg) {
+            width: 591px;
+        }
     }
 }
 
